--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,10 @@
 <router-outlet></router-outlet>
 
 </div>
+
+<h1>Custom Directive in Angular</h1>
+<h2>Normal Heading</h2>
+<h2 appCustomstyle>Custom Heading</h2>
+
+<h2>{{30 |usd2inr:80}} - custom pipe</h2>
+<h3>{{title | trimString:7 |capitalizeFirstChar}}</h3>
